Upgrade ruby & javascript dependencies
Remove (now) unnecessary files

Note that juicer is unsupported and would be replaced in a future commit.
A future commit will also bump up javascript runtime versions.

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -8,10 +8,11 @@
 # src_files:
 #   - lib/source1.js
 #   - lib/source2.js
-#   - dist/**/*.js
+#   - 'dist/**/*.js'
 #
 src_files:
-  - spec/javascripts/support/sinon-1.0.0.js
+  - spec/javascripts/support/sinon-7.5.0.js
+  - spec/javascripts/helpers/fake.server.js
   - public/javascripts/lib/jquery-1.7.1.js
   - public/javascripts/lib/underscore.js
   - public/javascripts/lib/backbone.js
@@ -28,7 +29,7 @@ src_files:
 #
 # stylesheets:
 #   - css/style.css
-#   - stylesheets/*.css
+#   - 'stylesheets/*.css'
 #
 stylesheets:
 
@@ -40,21 +41,22 @@ stylesheets:
 # EXAMPLE:
 #
 # helpers:
-#   - helpers/**/*.js
+#   - 'helpers/**/*.js'
 #
 helpers:
 
 # spec_files
 #
-#  Return an array of filepaths relative to spec_dir to include.
+# Return an array of filepaths relative to spec_dir to include.
 # Default: ["**/*[sS]pec.js"]
 #
 # EXAMPLE:
 #
 # spec_files:
-#   - **/*[sS]pec.js
+#   - '**/*[sS]pec.js'
 #
 spec_files:
+  - '**/*[sS]pec.js'
 
 # src_dir
 #
@@ -77,3 +79,71 @@ src_dir:
 # spec_dir: spec/javascripts
 #
 spec_dir:
+
+# spec_helper
+#
+# Ruby file that Jasmine server will require before starting.
+# Returned relative to your root path
+# Default spec/javascripts/support/jasmine_helper.rb
+#
+# EXAMPLE:
+#
+# spec_helper: spec/javascripts/support/jasmine_helper.rb
+#
+spec_helper: spec/javascripts/support/jasmine_helper.rb
+
+# boot_dir
+#
+# Boot directory path. Your boot_files must be returned relative to this path.
+# Default: Built in boot file
+#
+# EXAMPLE:
+#
+# boot_dir: spec/javascripts/support/boot
+#
+boot_dir:
+
+# boot_files
+#
+# Return an array of filepaths relative to boot_dir to include in order to boot Jasmine
+# Default: Built in boot file
+#
+# EXAMPLE
+#
+# boot_files:
+#   - '**/*.js'
+#
+boot_files:
+
+# rack_options
+#
+# Extra options to be passed to the rack server
+# by default, Port and AccessLog are passed.
+#
+# This is an advanced options, and left empty by default
+#
+# EXAMPLE
+#
+# rack_options:
+#   server: 'thin'
+
+# phantom_cli_options
+#
+# Extra options to be passed to the phantomjs cli,
+# e.g. to enable localStorage in PhantomJs 2.5
+#
+# EXAMPLE
+#
+# phantom_cli_options:
+#   local-storage-quota: 5000
+
+# random
+#
+# Run specs in semi-random order.
+# Default: true
+#
+# EXAMPLE:
+#
+# random: false
+#
+random:
