--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -13,11 +13,15 @@
 src_files:
   - spec/javascripts/support/sinon-7.5.0.js
   - spec/javascripts/helpers/fake.server.js
-  - public/javascripts/lib/jquery-1.7.1.js
+  - public/javascripts/lib/jquery-3.4.1.js
   - public/javascripts/lib/underscore.js
   - public/javascripts/lib/backbone.js
   - public/javascripts/boot/initialize.js
   - public/javascripts/config/*.js
+  - public/javascripts/app/models/*.js
+  - public/javascripts/app/collections/*.js
+  - public/javascripts/app/routers/*.js
+  - public/javascripts/app/views/*.js
   - public/javascripts/app/**/*.js
 
 # stylesheets
